# prosper

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
sample/: CMakeLists.txt
sample/data/: level.yaml
sample/src/: main.cpp
shaders/: compile.sh
shaders/src/: gradient.slang  input_structures.slang  lighting.slang  mesh.slang  skinning.slang  skybox.slang
shaders/src/common/: render_flags.h
src/: camera.cpp  camera.h  filesystem.cpp  filesystem.h  input.cpp  input.h  loader.cpp  loader.h  main.cpp  math.cpp  math.h  physics.cpp  physics.h  prosper.cpp  prosper.h  renderer.cpp  renderer.h  shaders  util.h  vk_descriptors.cpp  vk_descriptors.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_shader_object.cpp  vk_shader_object.h  vk_types.cpp  vk_types.h  yaml.h
src/components/: animation_player.cpp  animation_player.h  bone.cpp  bone.h  camera.cpp  camera.h  character_controller.cpp  character_controller.h  collectible.cpp  collectible.h  mesh_instance.cpp  mesh_instance.h  model_data.cpp  model_data.h  point_light.cpp  point_light.h  rigid_body.cpp  rigid_body.h  skeleton.cpp  skeleton.h  skinned_mesh.cpp  skinned_mesh.h  state_machine.cpp  state_machine.h
src/components/physics/: rigid_body.cpp  rigid_body.h  static_body.cpp  static_body.h
src/core/: component.cpp  component.h  node.cpp  node.h  resource.h  resource_manager.h  scene_graph.cpp  scene_graph.h  signal.h
src/rendering/: descriptors.cpp  descriptors.h  renderer.cpp  renderer.h  shader_object.cpp  shader_object.h  types.h  vulkan_pch.h
src/resources/: animation.cpp  animation.h  mesh.cpp  mesh.h  scene.cpp  scene.h  texture.cpp  texture.h
src/states/: air.cpp  air.h  dodge.cpp  dodge.h  idle.cpp  idle.h  move.cpp  move.h
